WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240672
[Curl] Suppress warning of unused enum value in switch statement.
https://bugs.webkit.org/show_bug.cgi?id=240672
Summary
[Curl] Suppress warning of unused enum value in switch statement.
Basuke Suzuki
Reported
2022-05-19 11:09:52 PDT
``` C:/PSDev/webkit/Source/WebCore/platform/network/curl/CurlRequest.cpp:113:13: warning: enumeration value 'WaitingForStart' not handled in switch [-Wswitch] switch (m_startState) { ^~~~~~~~~~~~ 1 warning generated. ```
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-05-19 15:44:44 PDT
Committed
r294509
(
250766@main
): <
https://commits.webkit.org/250766@main
> Reviewed commits have been landed. Closing PR #795 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-05-19 15:45:15 PDT
<
rdar://problem/93608664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug